dont allow sidebar to overlap content on narrow displays. fixes #57

--- a/app/assets/stylesheets/main.css.less
+++ b/app/assets/stylesheets/main.css.less
@@ -360,3 +360,13 @@ table.dataTable th:active {
 
   }
 }
+
+.affix{
+    position: static;
+}
+
+@media (min-width: 992px) {
+  #api-sidebar.affix {
+    position: fixed;
+  }
+}
